crates/philo-tui/src/tests/snapshots/m14_responsive_layout.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: snapshot
---
40 columns
| tool 1/1  read_file
path: src/中 文 .rs



┌ Message · enter queues ──────────────┐
│› 中 文  é 👩‍💻  and a long draft that wrap│
│  s inside the composer               │
│                                      │
│                                      │
└──────────────────────────────────────┘
session session-中 文  · busy

80 columns
| tool 1/1  read_file
path: src/中 文 .rs



┌ Message · enter queues ──────────────────────────────────────────────────────┐
│› 中 文  é 👩‍💻  and a long draft that wraps inside the composer                   │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
model gpt-test · session session-中 文  · busy

120 columns
| tool 1/1  read_file
path: src/中 文 .rs



┌ Message · enter queues ──────────────────────────────────────────────────────────────────────────────────────────────┐
│› 中 文  é 👩‍💻  and a long draft that wraps inside the composer                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
model gpt-test · session session-中 文  · busy
