crates/philo-tui/src/tests/snapshots/m15_composer_growth.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: rendered
---
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
───────────────────────────────────────────────────────────────────────────────
  ● Ready                                                            gpt-test
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ line-2                                                                    │
│   line-3                                                                    │
│   line-4                                                                    │
│   line-5                                                                    │
│   line-6                                                                    │
│   tail                                                                      │
╰───────────────────────────────────────────────────────────────────────[L3/8]╯
                                                          ↑-  ↓-  R-  C-  -/-
