crates/philo-tui/src/tests/snapshots/m16_user_prompt_prefix.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: rendered
---
    ❯ hello world this wraps somewh    │
      ere here                         │
    hello                              │
                                       │
                                       │
                                       │
───────────────────────────────────────
  ● Ready                    gpt-test
╭─────────────────────────────────────╮
│ ❯ Ask anything                      │
╰─────────────────────────────────────╯
                  ↑-  ↓-  R-  C-  -/-
