crates/philo-tui/src/tests/snapshots/m17_history_viewport_24.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: follow
---
    row-7                                                                      │
    row-8                                                                      │
    row-9                                                                      │
    row-10                                                                     │
    row-11                                                                     │
    row-12                                                                     │
    row-13                                                                     █
    row-14                                                                     █
    row-15                                                                     █
    row-16                                                                     █
    row-17                                                                     █
    row-18                                                                     █
    row-19                                                                     █
    row-20                                                                     █
    row-21                                                                     █
    row-22                                                                     █
    row-23                                                                     █
    row-24                                                                     █
───────────────────────────────────────────────────────────────────────────────
  ● Ready                                                            gpt-test
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
                                                          ↑-  ↓-  R-  C-  -/-
