crates/philo-tui/src/tests/snapshots/m18_command_menu.snap
---
source: crates/philo-tui/src/render/frame.rs
assertion_line: 1452
expression: rendered
---
    ╭─────────────────────────────────────────────────────────────────────╮
    │Slash Commands                               Tab complete · ↑↓ select│
    │─────────────────────────────────────────────────────────────────────│
    │▎▶ /sessions  pick a session to continue                             │
    │   /status    session, model, usage and the tool lineup              │
    ╰─────────────────────────────────────────────────────────────────────╯
───────────────────────────────────────────────────────────────────────────────
  ● Ready                                                            gpt-test
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ /s                                                                        │
╰─────────────────────────────────────────────────────────────────────────────╯
                                                          ↑-  ↓-  R-  C-  -/-
