crates/philo-tui/src/tests/snapshots/m1_idle_skeleton.snap
---
source: crates/philo-tui/src/render/frame.rs
assertion_line: 1364
expression: rendered
---
    hello






                                                                    gpt-test
   ▌
   ▌ Ask anything
   ▌
                                                             ↑- ↓- R- C- -/-
