crates/philo-tui/src/tests/snapshots/m2_idle_dashboard.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: rendered
---
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
───────────────────────────────────────────────────────────────────────────────
  ● Ready                                                      gpt-5.2 · high
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
  D:\Code\Zed\Year2026\Jul0706\Pi        ↑11k  ↓4.8k  R14k  C51.3%  2.2%/500k
