crates/philo-tui/src/tests/snapshots/m3_approval_overlay.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: rendered
---
                        ╭╌ Approval required ╌╌╌╌╌╌╌╌╮
                        │                            │
                        │ write workspace file       │
                        │                            │
                        │ [Enter/y] allow · [n] deny │
                        ╰────────────────────────────╯
───────────────────────────────────────────────────────────────────────────────
  ⠋ Approval (12s)                                    (openai) gpt-5.2 · high
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
  D:\Code\Zed\Year2026\Jul0706\Pi        ↑11k  ↓4.8k  R14k  C51.3%  2.2%/500k
