crates/philo-tui/src/tests/snapshots/m3_writing_state.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: rendered
---
    streaming                                                                  │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
───────────────────────────────────────────────────────────────────────────────
  ⠋ Writing (42s)                                     (openai) gpt-5.2 · high
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
  D:\Code\Zed\Year2026\Jul0706\Pi        ↑11k  ↓4.8k  R14k  C51.3%  2.2%/500k
