crates/philo-tui/src/tests/snapshots/m4_writing_strip.snap
---
source: crates/philo-tui/src/tests/streaming.rs
assertion_line: 148
expression: rendered
---
                                                                               │
    ❯ Find the homepage button and make it blue                                │
                                                                               │
    ▎ Thought for 8s ·····································  (按  Space 查 看 )    │
                                                                               │
    Looking at the middleware, I can see the refresh path skips expired        │
    tokens when a session cookie is still valid.                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
───────────────────────────────────────────────────────────────────────────────
  ⠋ Writing (42s)                                              gpt-5.2 · high
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
  D:\Code\Zed\Year2026\Jul0706\Pi        ↑11k  ↓4.8k  R14k  C51.3%  2.2%/500k
