crates/philo-tui/src/tests/snapshots/m5_failure_card.snap
---
source: crates/philo-tui/src/tests/tool_cards.rs
expression: dump
---
Title: edit
Failure:   ↳ Failed. not_unique · old_string matches 3 locations
